# kafka-faust

./: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
src/: teste.py
