[tool.poetry]
name = "kafka-faust"
version = "0.1.0"
description = ""
authors = ["garibaldiviolin <garibaldiviolin@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
faust-streaming = "^0.10.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
